--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <button class="btn-seta btn-voltar" id="btn-voltar">
             <img src="src/images/seta.png" 
-            alt="seta voltar">
+            alt="seta voltar" class="imagem-pokemon opacidade">
         </button>
 
         <ul class="lista-pokemons">
